# delegates

./: .doxygen.txt  CMakeLists.txt  README.md
docs/: README.md  contact.md  development_status.md  documentation.md  downloads.md  examples.md  getting_started.md  home.md  license.md  links.md  portability.md  release_notes.md
examples/: CMakeLists.txt
examples/event/: CMakeLists.txt
examples/hello_world_delegates/: CMakeLists.txt
src/: CMakeLists.txt
src/delegates/: CMakeLists.txt
src/delegates/include/delegates/: action.h  delegate.h  delegates  event.h  event_args.h  event_handler.h  func.h  overload.h  predicate.h
src/delegates/src/delegates/: delegates.cpp  event_args.cpp
src/xtd_delegates/include/xtd/: delegate.h
tests/: CMakeLists.txt
tests/delegate.manual_tests/: CMakeLists.txt
tests/delegate.manual_tests/src/: manual_tests.cpp
tests/delegate.unit_tests/: CMakeLists.txt
tests/delegate.unit_tests/src/: delegate.cpp
